sdk/opendp/smartnoise/XPath/parser/XPathParser.py
# Generated from XPath.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class XPathParser ( Parser ):

    grammarFileName = "XPath.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'//'", "'['", "']'", "'@*'", "<INVALID>", 
                     "'<=>'", "'<>'", "'!='", "'<'", "<INVALID>", "'>'", 
                     "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'%'", "'~'", 
                     "'&'", "'|'", "'||'", "'^'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "EQ", "NSEQ", "NEQ", "NEQJ", "LT", "LTE", 
                      "GT", "GTE", "PLUS", "MINUS", "ASTERISK", "SLASH", 
                      "PERCENT", "TILDE", "AMPERSAND", "PIPE", "CONCAT_PIPE", 
                      "HAT", "TRUE", "FALSE", "NULL", "STRING", "INTEGER_VALUE", 
                      "DECIMAL_VALUE", "ATTRIBUTE", "IDENTIFIER", "LETTER", 
                      "WS", "SPACE" ]

    RULE_statement = 0
    RULE_innerStatement = 1
    RULE_childSelector = 2
    RULE_rootSelector = 3
    RULE_rootDescendantSelector = 4
    RULE_descendantSelector = 5
    RULE_booleanSelector = 6
    RULE_allSelect = 7
    RULE_allNodes = 8
    RULE_allAttributes = 9
    RULE_comparisonOperator = 10
    RULE_booleanValue = 11
    RULE_allExpression = 12
    RULE_literal = 13
    RULE_number = 14

    ruleNames =  [ "statement", "innerStatement", "childSelector", "rootSelector", 
                   "rootDescendantSelector", "descendantSelector", "booleanSelector", 
                   "allSelect", "allNodes", "allAttributes", "comparisonOperator", 
                   "booleanValue", "allExpression", "literal", "number" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    EQ=5
    NSEQ=6
    NEQ=7
    NEQJ=8
    LT=9
    LTE=10
    GT=11
    GTE=12
    PLUS=13
    MINUS=14
    ASTERISK=15
    SLASH=16
    PERCENT=17
    TILDE=18
    AMPERSAND=19
    PIPE=20
    CONCAT_PIPE=21
    HAT=22
    TRUE=23
    FALSE=24
    NULL=25
    STRING=26
    INTEGER_VALUE=27
    DECIMAL_VALUE=28
    ATTRIBUTE=29
    IDENTIFIER=30
    LETTER=31
    WS=32
    SPACE=33

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def innerStatement(self):
            return self.getTypedRuleContext(XPathParser.InnerStatementContext,0)


        def EOF(self):
            return self.getToken(XPathParser.EOF, 0)

        def getRuleIndex(self):
            return XPathParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = XPathParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self.innerStatement()
            self.state = 31
            self.match(XPathParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InnerStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def childSelector(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XPathParser.ChildSelectorContext)
            else:
                return self.getTypedRuleContext(XPathParser.ChildSelectorContext,i)


        def rootSelector(self):
            return self.getTypedRuleContext(XPathParser.RootSelectorContext,0)


        def rootDescendantSelector(self):
            return self.getTypedRuleContext(XPathParser.RootDescendantSelectorContext,0)


        def SLASH(self, i:int=None):
            if i is None:
                return self.getTokens(XPathParser.SLASH)
            else:
                return self.getToken(XPathParser.SLASH, i)

        def descendantSelector(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XPathParser.DescendantSelectorContext)
            else:
                return self.getTypedRuleContext(XPathParser.DescendantSelectorContext,i)


        def getRuleIndex(self):
            return XPathParser.RULE_innerStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInnerStatement" ):
                listener.enterInnerStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInnerStatement" ):
                listener.exitInnerStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInnerStatement" ):
                return visitor.visitInnerStatement(self)
            else:
                return visitor.visitChildren(self)




    def innerStatement(self):

        localctx = XPathParser.InnerStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_innerStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [XPathParser.T__3, XPathParser.ASTERISK, XPathParser.ATTRIBUTE, XPathParser.IDENTIFIER]:
                self.state = 33
                self.childSelector()
                pass
            elif token in [XPathParser.SLASH]:
                self.state = 34
                self.rootSelector()
                pass
            elif token in [XPathParser.T__0]:
                self.state = 35
                self.rootDescendantSelector()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==XPathParser.T__0 or _la==XPathParser.SLASH:
                self.state = 42
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [XPathParser.SLASH]:
                    self.state = 38
                    self.match(XPathParser.SLASH)
                    self.state = 39
                    self.childSelector()
                    pass
                elif token in [XPathParser.T__0]:
                    self.state = 40
                    self.match(XPathParser.T__0)

                    self.state = 41
                    self.descendantSelector()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 46
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ChildSelectorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.ident = None # Token
            self.attr = None # Token
            self.allsel = None # AllSelectContext

        def IDENTIFIER(self):
            return self.getToken(XPathParser.IDENTIFIER, 0)

        def ATTRIBUTE(self):
            return self.getToken(XPathParser.ATTRIBUTE, 0)

        def allSelect(self):
            return self.getTypedRuleContext(XPathParser.AllSelectContext,0)


        def booleanSelector(self):
            return self.getTypedRuleContext(XPathParser.BooleanSelectorContext,0)


        def getRuleIndex(self):
            return XPathParser.RULE_childSelector

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterChildSelector" ):
                listener.enterChildSelector(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitChildSelector" ):
                listener.exitChildSelector(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitChildSelector" ):
                return visitor.visitChildSelector(self)
            else:
                return visitor.visitChildren(self)




    def childSelector(self):

        localctx = XPathParser.ChildSelectorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_childSelector)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [XPathParser.IDENTIFIER]:
                self.state = 47
                localctx.ident = self.match(XPathParser.IDENTIFIER)
                pass
            elif token in [XPathParser.ATTRIBUTE]:
                self.state = 48
                localctx.attr = self.match(XPathParser.ATTRIBUTE)
                pass
            elif token in [XPathParser.T__3, XPathParser.ASTERISK]:
                self.state = 49
                localctx.allsel = self.allSelect()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==XPathParser.T__1:
                self.state = 52
                self.booleanSelector()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RootSelectorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.ident = None # Token
            self.attr = None # Token
            self.allsel = None # AllSelectContext

        def SLASH(self):
            return self.getToken(XPathParser.SLASH, 0)

        def IDENTIFIER(self):
            return self.getToken(XPathParser.IDENTIFIER, 0)

        def ATTRIBUTE(self):
            return self.getToken(XPathParser.ATTRIBUTE, 0)

        def allSelect(self):
            return self.getTypedRuleContext(XPathParser.AllSelectContext,0)


        def booleanSelector(self):
            return self.getTypedRuleContext(XPathParser.BooleanSelectorContext,0)


        def getRuleIndex(self):
            return XPathParser.RULE_rootSelector

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRootSelector" ):
                listener.enterRootSelector(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRootSelector" ):
                listener.exitRootSelector(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRootSelector" ):
                return visitor.visitRootSelector(self)
            else:
                return visitor.visitChildren(self)




    def rootSelector(self):

        localctx = XPathParser.RootSelectorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_rootSelector)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(XPathParser.SLASH)
            self.state = 59
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [XPathParser.IDENTIFIER]:
                self.state = 56
                localctx.ident = self.match(XPathParser.IDENTIFIER)
                pass
            elif token in [XPathParser.ATTRIBUTE]:
                self.state = 57
                localctx.attr = self.match(XPathParser.ATTRIBUTE)
                pass
            elif token in [XPathParser.T__3, XPathParser.ASTERISK]:
                self.state = 58
                localctx.allsel = self.allSelect()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==XPathParser.T__1:
                self.state = 61
                self.booleanSelector()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RootDescendantSelectorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.ident = None # Token
            self.attr = None # Token
            self.allsel = None # AllSelectContext

        def IDENTIFIER(self):
            return self.getToken(XPathParser.IDENTIFIER, 0)

        def ATTRIBUTE(self):
            return self.getToken(XPathParser.ATTRIBUTE, 0)

        def allSelect(self):
            return self.getTypedRuleContext(XPathParser.AllSelectContext,0)


        def booleanSelector(self):
            return self.getTypedRuleContext(XPathParser.BooleanSelectorContext,0)


        def getRuleIndex(self):
            return XPathParser.RULE_rootDescendantSelector

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRootDescendantSelector" ):
                listener.enterRootDescendantSelector(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRootDescendantSelector" ):
                listener.exitRootDescendantSelector(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRootDescendantSelector" ):
                return visitor.visitRootDescendantSelector(self)
            else:
                return visitor.visitChildren(self)




    def rootDescendantSelector(self):

        localctx = XPathParser.RootDescendantSelectorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_rootDescendantSelector)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(XPathParser.T__0)
            self.state = 68
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [XPathParser.IDENTIFIER]:
                self.state = 65
                localctx.ident = self.match(XPathParser.IDENTIFIER)
                pass
            elif token in [XPathParser.ATTRIBUTE]:
                self.state = 66
                localctx.attr = self.match(XPathParser.ATTRIBUTE)
                pass
            elif token in [XPathParser.T__3, XPathParser.ASTERISK]:
                self.state = 67
                localctx.allsel = self.allSelect()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==XPathParser.T__1:
                self.state = 70
                self.booleanSelector()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DescendantSelectorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.ident = None # Token
            self.attr = None # Token
            self.allsel = None # AllSelectContext

        def IDENTIFIER(self):
            return self.getToken(XPathParser.IDENTIFIER, 0)

        def ATTRIBUTE(self):
            return self.getToken(XPathParser.ATTRIBUTE, 0)

        def allSelect(self):
            return self.getTypedRuleContext(XPathParser.AllSelectContext,0)


        def booleanSelector(self):
            return self.getTypedRuleContext(XPathParser.BooleanSelectorContext,0)


        def getRuleIndex(self):
            return XPathParser.RULE_descendantSelector

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDescendantSelector" ):
                listener.enterDescendantSelector(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDescendantSelector" ):
                listener.exitDescendantSelector(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDescendantSelector" ):
                return visitor.visitDescendantSelector(self)
            else:
                return visitor.visitChildren(self)




    def descendantSelector(self):

        localctx = XPathParser.DescendantSelectorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_descendantSelector)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [XPathParser.IDENTIFIER]:
                self.state = 73
                localctx.ident = self.match(XPathParser.IDENTIFIER)
                pass
            elif token in [XPathParser.ATTRIBUTE]:
                self.state = 74
                localctx.attr = self.match(XPathParser.ATTRIBUTE)
                pass
            elif token in [XPathParser.T__3, XPathParser.ASTERISK]:
                self.state = 75
                localctx.allsel = self.allSelect()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==XPathParser.T__1:
                self.state = 78
                self.booleanSelector()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BooleanSelectorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.left = None # InnerStatementContext
            self.op = None # ComparisonOperatorContext
            self.lit = None # LiteralContext
            self.stmt = None # InnerStatementContext

        def innerStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XPathParser.InnerStatementContext)
            else:
                return self.getTypedRuleContext(XPathParser.InnerStatementContext,i)


        def comparisonOperator(self):
            return self.getTypedRuleContext(XPathParser.ComparisonOperatorContext,0)


        def literal(self):
            return self.getTypedRuleContext(XPathParser.LiteralContext,0)


        def getRuleIndex(self):
            return XPathParser.RULE_booleanSelector

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBooleanSelector" ):
                listener.enterBooleanSelector(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBooleanSelector" ):
                listener.exitBooleanSelector(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBooleanSelector" ):
                return visitor.visitBooleanSelector(self)
            else:
                return visitor.visitChildren(self)




    def booleanSelector(self):

        localctx = XPathParser.BooleanSelectorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_booleanSelector)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(XPathParser.T__1)
            self.state = 82
            localctx.left = self.innerStatement()
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << XPathParser.EQ) | (1 << XPathParser.NEQ) | (1 << XPathParser.NEQJ) | (1 << XPathParser.LT) | (1 << XPathParser.LTE) | (1 << XPathParser.GT) | (1 << XPathParser.GTE))) != 0):
                self.state = 83
                localctx.op = self.comparisonOperator()
                self.state = 86
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [XPathParser.MINUS, XPathParser.TRUE, XPathParser.FALSE, XPathParser.NULL, XPathParser.STRING, XPathParser.INTEGER_VALUE, XPathParser.DECIMAL_VALUE]:
                    self.state = 84
                    localctx.lit = self.literal()
                    pass
                elif token in [XPathParser.T__0, XPathParser.T__3, XPathParser.ASTERISK, XPathParser.SLASH, XPathParser.ATTRIBUTE, XPathParser.IDENTIFIER]:
                    self.state = 85
                    localctx.stmt = self.innerStatement()
                    pass
                else:
                    raise NoViableAltException(self)



            self.state = 90
            self.match(XPathParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AllSelectContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def allAttributes(self):
            return self.getTypedRuleContext(XPathParser.AllAttributesContext,0)


        def allNodes(self):
            return self.getTypedRuleContext(XPathParser.AllNodesContext,0)


        def getRuleIndex(self):
            return XPathParser.RULE_allSelect

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAllSelect" ):
                listener.enterAllSelect(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAllSelect" ):
                listener.exitAllSelect(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAllSelect" ):
                return visitor.visitAllSelect(self)
            else:
                return visitor.visitChildren(self)




    def allSelect(self):

        localctx = XPathParser.AllSelectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_allSelect)
        try:
            self.state = 94
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [XPathParser.T__3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.allAttributes()
                pass
            elif token in [XPathParser.ASTERISK]:
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                self.allNodes()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AllNodesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASTERISK(self):
            return self.getToken(XPathParser.ASTERISK, 0)

        def getRuleIndex(self):
            return XPathParser.RULE_allNodes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAllNodes" ):
                listener.enterAllNodes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAllNodes" ):
                listener.exitAllNodes(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAllNodes" ):
                return visitor.visitAllNodes(self)
            else:
                return visitor.visitChildren(self)




    def allNodes(self):

        localctx = XPathParser.AllNodesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_allNodes)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(XPathParser.ASTERISK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AllAttributesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return XPathParser.RULE_allAttributes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAllAttributes" ):
                listener.enterAllAttributes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAllAttributes" ):
                listener.exitAllAttributes(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAllAttributes" ):
                return visitor.visitAllAttributes(self)
            else:
                return visitor.visitChildren(self)




    def allAttributes(self):

        localctx = XPathParser.AllAttributesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_allAttributes)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(XPathParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComparisonOperatorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQ(self):
            return self.getToken(XPathParser.EQ, 0)

        def NEQ(self):
            return self.getToken(XPathParser.NEQ, 0)

        def NEQJ(self):
            return self.getToken(XPathParser.NEQJ, 0)

        def LT(self):
            return self.getToken(XPathParser.LT, 0)

        def LTE(self):
            return self.getToken(XPathParser.LTE, 0)

        def GT(self):
            return self.getToken(XPathParser.GT, 0)

        def GTE(self):
            return self.getToken(XPathParser.GTE, 0)

        def getRuleIndex(self):
            return XPathParser.RULE_comparisonOperator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparisonOperator" ):
                listener.enterComparisonOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparisonOperator" ):
                listener.exitComparisonOperator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComparisonOperator" ):
                return visitor.visitComparisonOperator(self)
            else:
                return visitor.visitChildren(self)




    def comparisonOperator(self):

        localctx = XPathParser.ComparisonOperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_comparisonOperator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << XPathParser.EQ) | (1 << XPathParser.NEQ) | (1 << XPathParser.NEQJ) | (1 << XPathParser.LT) | (1 << XPathParser.LTE) | (1 << XPathParser.GT) | (1 << XPathParser.GTE))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BooleanValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRUE(self):
            return self.getToken(XPathParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(XPathParser.FALSE, 0)

        def getRuleIndex(self):
            return XPathParser.RULE_booleanValue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBooleanValue" ):
                listener.enterBooleanValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBooleanValue" ):
                listener.exitBooleanValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBooleanValue" ):
                return visitor.visitBooleanValue(self)
            else:
                return visitor.visitChildren(self)




    def booleanValue(self):

        localctx = XPathParser.BooleanValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_booleanValue)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            _la = self._input.LA(1)
            if not(_la==XPathParser.TRUE or _la==XPathParser.FALSE):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AllExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASTERISK(self):
            return self.getToken(XPathParser.ASTERISK, 0)

        def getRuleIndex(self):
            return XPathParser.RULE_allExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAllExpression" ):
                listener.enterAllExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAllExpression" ):
                listener.exitAllExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAllExpression" ):
                return visitor.visitAllExpression(self)
            else:
                return visitor.visitChildren(self)




    def allExpression(self):

        localctx = XPathParser.AllExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_allExpression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(XPathParser.ASTERISK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return XPathParser.RULE_literal

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class NullLiteralContext(LiteralContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a XPathParser.LiteralContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NULL(self):
            return self.getToken(XPathParser.NULL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNullLiteral" ):
                listener.enterNullLiteral(self)
